# codeslayer.comments-plugin

./: Makefile.in  comments.codeslayer-plugin.in  configure  configure.ac
.codeslayer/: autotools.conf  ctags.conf
comments/: Makefile.am
comments/.svn/: all-wcprops  entries
comments/.svn/text-base/: Makefile.in.svn-base  configure.svn-base
comments/autom4te.cache/: output.0  traces.0  traces.1
comments/build-prod/: Makefile  config.status  libtool
comments/build-prod/src/: Makefile  libcommentscodeslayerplugin.la  libcommentscodeslayerplugin_la-comments-configuration.lo  libcommentscodeslayerplugin_la-comments-dialog.lo  libcommentscodeslayerplugin_la-comments-engine.lo  libcommentscodeslayerplugin_la-comments-menu.lo  libcommentscodeslayerplugin_la-comments-plugin.lo
comments/build-prod/src/.deps/: libcommentscodeslayerplugin_la-comments-configuration.Plo  libcommentscodeslayerplugin_la-comments-dialog.Plo  libcommentscodeslayerplugin_la-comments-engine.Plo  libcommentscodeslayerplugin_la-comments-menu.Plo  libcommentscodeslayerplugin_la-comments-plugin.Plo
comments/m4/.svn/: entries
comments/src/: Makefile.in
comments/src/.svn/text-base/: Makefile.am.svn-base  (+3 more)
m4/.svn/: all-wcprops
src/: Makefile.am  Makefile.in  comments-config.c  comments-config.h  comments-configuration.c  comments-configuration.h  comments-dialog.c  comments-dialog.h  comments-engine.c  comments-engine.h  comments-menu.c  comments-plugin.c
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.in.svn-base  comments-menu.c.svn-base  comments-menu.h.svn-base
(+2 files in other folders)
