lib_LTLIBRARIES = libcommentscodeslayerplugin.la

libcommentscodeslayerplugin_la_SOURCES = \
    comments-menu.h \
    comments-menu.c \
    comments-engine.h \
    comments-engine.c \
    comments-dialog.h \
    comments-dialog.c \
    comments-config.h \
    comments-config.c \
    comments-plugin.c

libcommentscodeslayerplugin_la_CPPFLAGS = $(COMMENTSCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
